correction pointer tri portfolio, correction alignement du header title, debut du shema.org

--- a/assets/style.css
+++ b/assets/style.css
@@ -17,6 +17,7 @@ body {
 	padding-block: 30px;
 	padding-right: 10px;
 	align-items: center;
+	padding-left: 20px;
 }
 
 .top-header .name {
@@ -138,9 +139,11 @@ body {
 	color: black;
 	background-color: #BEB45A;
 	border-radius:0 ;
+	cursor : pointer;
 }
 .nav-pills .nav-link {
-	color: #000
+	color: #000;
+	cursor : pointer;
 }
 .item-column {
 	position: relative;
